--- a/SimpleAudioRecorder/Main.storyboard
+++ b/SimpleAudioRecorder/Main.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -78,7 +80,8 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="734"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Jh-v3-x5L" secondAttribute="trailing" constant="16" id="Fs6-xQ-bJI"/>
                             <constraint firstItem="uJ3-m3-5as" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="HdK-fi-KDd"/>
@@ -88,7 +91,6 @@
                             <constraint firstItem="uJ3-m3-5as" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bTc-ra-ae4"/>
                             <constraint firstItem="uJ3-m3-5as" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yWH-Sh-Smi"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="audioVisualizer" destination="uJ3-m3-5as" id="u8o-Jm-bKb"/>
@@ -105,9 +107,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="mic.fill" catalog="system" width="54" height="64"/>
-        <image name="pause.fill" catalog="system" width="58" height="64"/>
-        <image name="play.fill" catalog="system" width="58" height="64"/>
-        <image name="stop.fill" catalog="system" width="64" height="56"/>
+        <image name="mic.fill" catalog="system" width="108" height="128"/>
+        <image name="pause.fill" catalog="system" width="116" height="128"/>
+        <image name="play.fill" catalog="system" width="116" height="128"/>
+        <image name="stop.fill" catalog="system" width="128" height="113"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
